--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
     repositories {
         jcenter()
-        mavenCentral()
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
@@ -10,23 +9,22 @@ buildscript {
 }
 
 plugins {
-    id 'net.ltgt.apt' version '0.10'
+    id 'de.undercouch.download' version '4.0.0'
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-repositories {
-    mavenCentral()
-}
+version = "1"
+group = "de.jumpingpxl"
+archivesBaseName = 'ChatTime'
 
-dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    apt 'org.projectlombok:lombok:1.18.4'
-}
+sourceCompatibility = targetCompatibility = '1.8'
 
-version = "1.0"
-group = "com.yourname.modid"
-archivesBaseName = "modid"
+compileJava.options.encoding = 'UTF-8'
+
+compileJava {
+    sourceCompatibility = targetCompatibility = '1.8'
+}
 
 minecraft {
     version = "1.12.2-14.23.0.2512"
@@ -34,27 +32,41 @@ minecraft {
     mappings = "snapshot_20171003"
 }
 
+dependencies {
+    compile(files('libs/lm_api_mc1.12.2.jar'))
+}
+
 processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
+
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
+        
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
 
 reobf {
-    jar {
-        useNotchSrg()
+	jar {
+		useNotchSrg()
+	}
+}
+
+task downloadLabyAPI() {
+    group("labymod")
+
+    File libraryDirectory = new File("libs/")
+
+    if (!libraryDirectory.exists()) {
+        libraryDirectory.mkdirs()
+    }
+
+    download {
+        src "https://dl.labymod.net/latest/api/files/lm_api_mc1.12.2.jar"
+        dest 'libs/'
     }
 }
-
-sourceCompatibility = targetCompatibility = '1.8'
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
-
-compileJava.options.encoding = 'UTF-8'
